--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 				<div class="right-menu-wrap">
 					<nav class="right-menu">
 						<ul>
-							<li><a href="#"><img src="img/ic_calc.svg" alt=""></a></li>
+							<li><a class="popup-with-form" href="#test-form"><img src="img/ic_calc.svg" alt=""></a></li>
 							<li><a href="#"><img src="img/ic_search.svg" alt=""></a></li>
 						</ul>
 					</nav>
@@ -379,7 +379,35 @@
 		</div>
 	</footer>
 
+	
+	
 	<div class="hidden"></div>
+	
+	<!-- form itself -->
+	<form id="test-form" class="mfp-hide white-popup-block">
+		<h1>Form</h1>
+		<fieldset style="border:0;">
+			<p>Lightbox has an option to automatically focus on the first input. It's strongly recommended to use <code>inline</code> popup type for lightboxes with form instead of <code>ajax</code> (to keep entered data if the user accidentally refreshed the page).</p>
+			<ol>
+				<li>
+					<label for="name">Name</label>
+					<input id="name" name="name" type="text" placeholder="Name" required="">
+				</li>
+				<li>
+					<label for="email">Email</label>
+					<input id="email" name="email" type="email" placeholder="example@domain.com" required="">
+				</li>
+				<li>
+					<label for="phone">Phone</label>
+					<input id="phone" name="phone" type="tel" placeholder="Eg. +447500000000" required="">
+				</li>
+				<li>
+					<label for="textarea">Textarea</label><br>
+					<textarea id="textarea">Try to resize me to see how popup CSS-based resizing works.</textarea>
+				</li>
+			</ol>
+		</fieldset>
+	</form>
 
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
@@ -412,6 +440,7 @@
 	{"src" : "libs/waypoints/waypoints.min.js", "async" : false},
 	{"src" : "libs/animate/animate-css.js", "async" : false},
 	{"src" : "libs/plugins-scroll/plugins-scroll.js", "async" : false},
+	{"src" : "libs/magnific-popup/jquery.magnific-popup.min.js", "async" : false},
 	{"src" : "js/common.js", "async" : false}
 	]};!function(t,n,r){"use strict";var c=function(t){if("[object Array]"!==Object.prototype.toString.call(t))return!1;for(var r=0;r<t.length;r++){var c=n.createElement("script"),e=t[r];c.src=e.src,c.async=e.async,n.body.appendChild(c)}return!0};t.addEventListener?t.addEventListener("load",function(){c(r.scripts);},!1):t.attachEvent?t.attachEvent("onload",function(){c(r.scripts)}):t.onload=function(){c(r.scripts)}}(window,document,scr);
 </script>
