--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 				<div class="right-menu-wrap">
 					<nav class="right-menu">
 						<ul>
-							<li><a class="popup-with-form" href="#test-form"><img src="img/ic_calc.svg" alt=""></a></li>
+							<li><a class="popup-with-form popup-with-move-anim" href="#form-calc"><img src="img/ic_calc.svg" alt=""></a></li>
 							<li><a href="#"><img src="img/ic_search.svg" alt=""></a></li>
 						</ul>
 					</nav>
@@ -384,29 +384,23 @@
 	<div class="hidden"></div>
 	
 	<!-- form itself -->
-	<form id="test-form" class="mfp-hide white-popup-block">
-		<h1>Form</h1>
-		<fieldset style="border:0;">
-			<p>Lightbox has an option to automatically focus on the first input. It's strongly recommended to use <code>inline</code> popup type for lightboxes with form instead of <code>ajax</code> (to keep entered data if the user accidentally refreshed the page).</p>
-			<ol>
-				<li>
-					<label for="name">Name</label>
-					<input id="name" name="name" type="text" placeholder="Name" required="">
-				</li>
-				<li>
-					<label for="email">Email</label>
-					<input id="email" name="email" type="email" placeholder="example@domain.com" required="">
-				</li>
-				<li>
-					<label for="phone">Phone</label>
-					<input id="phone" name="phone" type="tel" placeholder="Eg. +447500000000" required="">
-				</li>
-				<li>
-					<label for="textarea">Textarea</label><br>
-					<textarea id="textarea">Try to resize me to see how popup CSS-based resizing works.</textarea>
-				</li>
-			</ol>
-		</fieldset>
+	<form id="form-calc" class="white-popup mfp-fade mfp-hide">
+		<h4>Рассчитать стоимость</h4>
+		
+		<div class="form-group">
+			<label for="exampleInputEmail1">Email address</label>
+			<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+		</div>
+
+		<div class="form-group">
+			<label for="exampleInputEmail1">Email address</label>
+			<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+		</div>
+
+		<div class="buttons-wrap">
+			<button class="buttons">Отправить</button>
+		</div>
+
 	</form>
 
 	<!--[if lt IE 9]>
