Add Block twitter

--- a/app/blog.html
+++ b/app/blog.html
@@ -154,8 +154,12 @@
         <div class="container">
             <div class="row">
                 
-                <div class="section-title text-center"> Twitter</div>
-
+                <div class="twitter-wrap">
+                    <h2 class="module-text"><img src="/img/social/twitter.svg" alt="Twitter"> @ films_at_work</h2>
+                    <div class="twitter-wrap_date">December 3, 2015</div>
+                    <a href="#" target="_blanc">We're topping off an exciting year at with a brand new 2015!</a>
+                </div>
+    
             </div>
         </div>
     </section>
